Fixed bug with header and overlapping with the toast, final push before merge request

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -4,15 +4,18 @@ ul {
   padding: 0;
   overflow: hidden;
   background-color: #ea526f;
+  position: -webkit-sticky;
   position: fixed;
   width: 100%;
   top: 0;
-  left: 0;
-  z-index: 9999;
+  z-index: 90;
 }
 
 li {
   float: left;
+}
+
+.header {
 }
 
 .header button {
@@ -43,5 +46,8 @@ span .MuiBadge-colorPrimary {
 
 .mainbody,
 .checkoutBody {
-  padding-top: 60px;
+  padding: 14px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: center;
 }
